# scrap-magalu

./: .env.sample  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
magalu/: main.py
magalu/magalu/: items.py  magalu_urls.py  middlewares.py  pipelines.py  settings.py
magalu/magalu/helpers/: fake_header.py  postgres.py
magalu/magalu/helpers/selenium/: get_total_deals_pages.py
magalu/magalu/spiders/: magalu_spider.py
