[tool.poetry]
name = "scrap-magalu"
version = "3.0.3"
description = "Scrap Magalu"
authors = ["guimassoqueto <gui.massoqueto@gmail.com>"]
readme = "README.md"
packages = [
{include = "magalu/**/*.py"}
]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.10.0"
ipython = "^8.14.0"
python-dotenv = "^1.0.0"
fake-useragent = "^1.1.3"
scrapy-playwright = "^0.0.31"
psycopg = "^3.1.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
